--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
-  "name": "react-webpack-typescript-2022",
-  "version": "2.0.0",
-  "description": "Minimal boilerplate for writing Web Applications using React, Webpack, TypeScript with best practices",
+  "name": "react-webpack-typescript-starterpack",
+  "version": "1.0.0",
+  "description": "React Webpack Typescript Starter Pack",
   "license": "MIT",
   "scripts": {
+    "build:clean": "rimraf dist",
     "start": "webpack serve --config tools/webpack/webpack.config.dev.js",
-    "build": "webpack --config tools/webpack/webpack.config.prod.js",
-    "serve": "webpack --progress -p --config tools/webpack/webpack.config.prod.js",
+    "build:dev": "npm run build:clean && webpack --config tools/webpack/webpack.config.dev.js --progress",
+    "build:prod": "npm run build:clean && webpack --config tools/webpack/webpack.config.prod.js --progress",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx src/"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/rimraf": "3.0.0",
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
+    "babel-loader": "8.1.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
@@ -30,6 +37,7 @@
     "less-loader": "^6.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
+    "rimraf": "3.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^3.3.1",
@@ -42,6 +50,7 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.0",
+    "core-js": "^3.27.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "uuid": "^9.0.0"
