--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,11 +27,22 @@
       }
     },
     "react": {
-      "version": "latest"
+      "version": "detect"
     }
   },
   "rules": {
     "react/prop-types": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "@typescript-eslint/no-var-requires": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "no-console": "error",
+    "complexity": ["error", 2],
+    "max-depth": ["error", { "max": 2 }],
+    "max-params": ["error", 3],
+    "max-statements": ["error", 6],
+    "no-unused-vars": "error",
+    "no-unused-labels": "error",
+    "arrow-body-style": ["error", "as-needed"]
   }
 }
