--- a/package.json
+++ b/package.json
@@ -35,13 +35,14 @@
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^6.0.0",
+    "logdown": "^3.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "react-refresh": "^0.14.0",
     "rimraf": "3.0.2",
     "sass": "^1.55.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^3.3.1",
-    "ts-loader": "9.4.1",
+    "terser-webpack-plugin": "^5.3.6",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-bundle-analyzer": "4.7.0",
@@ -49,10 +50,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
-    "@types/uuid": "^9.0.0",
     "core-js": "^3.27.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "uuid": "^9.0.0"
+    "react-dom": "^18.2.0"
   }
 }
