--- a/tools/babel/.babelrc
+++ b/tools/babel/.babelrc
@@ -7,7 +7,7 @@
         "corejs": "3"
       }
     ],
-    "@babel/preset-react",
+    ["@babel/preset-react", { "runtime": "automatic" }],
     "@babel/preset-typescript"
   ]
 }
