--- a/package.json
+++ b/package.json
@@ -5,17 +5,28 @@
   "license": "MIT",
   "scripts": {
     "build:clean": "rimraf dist",
-    "start": "webpack serve --config tools/webpack/webpack.config.dev.js",
     "build:dev": "npm run build:clean && webpack --config tools/webpack/webpack.config.dev.js --progress",
     "build:prod": "npm run build:clean && webpack --config tools/webpack/webpack.config.prod.js --progress",
-    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/"
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx src/",
+    "start": "webpack serve --config tools/webpack/webpack.config.dev.js"
+  },
+  "dependencies": {
+    "core-js": "^3.27.1",
+    "husky": "4.2.5",
+    "lint-staged": "10.2.13",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "9.1.1",
+    "@commitlint/config-conventional": "9.1.1",
+    "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/node": "^18.11.5",
+    "@types/prettier": "^1.19.1",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "@types/rimraf": "3.0.0",
@@ -27,8 +38,10 @@
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.31.10",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
@@ -37,6 +50,8 @@
     "less-loader": "^6.0.0",
     "logdown": "^3.3.1",
     "mini-css-extract-plugin": "^2.6.1",
+    "prettier": "^2.1.2",
+    "prettier-eslint-cli": "^5.0.0",
     "react-refresh": "^0.14.0",
     "rimraf": "3.0.2",
     "sass": "^1.55.0",
@@ -49,9 +64,11 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   },
-  "dependencies": {
-    "core-js": "^3.27.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+  "husky": {
+    "hooks": {
+      "commit-msg": "[[ -n $HUSKY_BYPASS ]] || commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "yarn lint-staged",
+      "post-merge": "echo 'post merge/pull reminder: consider running yarn install'"
+    }
   }
 }
