--- a/tools/babel/.babelrc
+++ b/tools/babel/.babelrc
@@ -4,10 +4,22 @@
       "@babel/preset-env",
       {
         "useBuiltIns": "usage",
-        "corejs": "3"
+        "corejs": "3",
+        "debug": true,
+        "targets": {
+          "browsers": "last 2 versions"
+        }
       }
     ],
     ["@babel/preset-react", { "runtime": "automatic" }],
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": "3"
+      }
+    ]
   ]
 }
