--- a/package.json
+++ b/package.json
@@ -11,58 +11,58 @@
     "start": "webpack serve --config tools/webpack/webpack.config.dev.js"
   },
   "dependencies": {
-    "core-js": "^3.27.1",
-    "husky": "4.2.5",
-    "lint-staged": "10.2.13",
+    "core-js": "^3.28.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/plugin-transform-runtime": "7.10.3",
+    "@babel/core": "^7.21.0",
+    "@babel/plugin-transform-runtime": "7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@commitlint/cli": "9.1.1",
-    "@commitlint/config-conventional": "9.1.1",
+    "@babel/preset-typescript": "^7.21.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/node": "^18.11.5",
-    "@types/prettier": "^1.19.1",
-    "@types/react": "^18.0.23",
-    "@types/react-dom": "^18.0.7",
-    "@types/rimraf": "3.0.0",
+    "@types/node": "^18.14.0",
+    "@types/prettier": "^2.7.2",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/rimraf": "4.0.5",
     "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "babel-loader": "8.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
+    "babel-loader": "9.1.2",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^7.3.1",
-    "eslint-config-prettier": "^6.10.0",
+    "eslint": "^8.34.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
-    "less-loader": "^6.0.0",
+    "less-loader": "^11.1.0",
     "logdown": "^3.3.1",
     "mini-css-extract-plugin": "^2.6.1",
-    "prettier": "^2.1.2",
-    "prettier-eslint-cli": "^5.0.0",
+    "prettier": "^2.8.4",
+    "prettier-eslint-cli": "^7.1.0",
     "react-refresh": "^0.14.0",
-    "rimraf": "3.0.2",
-    "sass": "^1.55.0",
-    "sass-loader": "^8.0.2",
+    "rimraf": "4.1.2",
+    "sass": "^1.58.3",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.6",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.5",
     "webpack": "^5.74.0",
-    "webpack-bundle-analyzer": "4.7.0",
-    "webpack-cli": "^4.10.0",
+    "webpack-bundle-analyzer": "4.8.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "husky": {
