--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "core-js": "^3.28.0",
-    "husky": "8.0.3",
-    "lint-staged": "13.1.2",
+    "lint-staged": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,8 +22,6 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "17.4.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
@@ -47,6 +44,7 @@
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "logdown": "^3.3.1",
@@ -68,7 +66,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "[[ -n $HUSKY_BYPASS ]] || commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "yarn lint-staged",
+      "pre-commit": "lint-staged",
       "post-merge": "echo 'post merge/pull reminder: consider running yarn install'"
     }
   }
