--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "core-js": "^3.28.0",
-    "lint-staged": "^13.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,6 +21,8 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/node": "^18.14.0",
     "@types/prettier": "^2.7.2",
@@ -47,6 +48,7 @@
     "husky": "^8.0.3",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "lint-staged": "^13.1.2",
     "logdown": "^3.3.1",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.8.4",
