--- a/tools/babel/.babelrc
+++ b/tools/babel/.babelrc
@@ -14,10 +14,26 @@
     "@babel/preset-typescript"
   ],
   "plugins": [
+    "babel-plugin-macros",
+    "@babel/plugin-proposal-nullish-coalescing-operator",
+    "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-export-default-from",
+    "@babel/plugin-proposal-export-namespace-from",
     [
       "@babel/plugin-transform-runtime",
       {
         "corejs": "3"
+      }
+    ],
+    [
+      "transform-imports",
+      {
+        "lodash": {
+          "transform": "lodash/${member}",
+          "preventFullImport": true
+        }
       }
     ]
   ]
