--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "webpack serve --config tools/webpack/webpack.config.dev.js"
   },
   "dependencies": {
+    "@babel/runtime": "^7.21.0",
     "core-js": "^3.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -27,6 +28,7 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.0",
+    "@babel/runtime-corejs3": "^7.21.0",
     "@commitlint/cli": "^17.4.4",
     "@commitlint/config-conventional": "^17.4.4",
     "@types/eslint-plugin-prettier": "^3.1.0",
